--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <h1> Οι Σεπτέμβρηδες...</h1>
   <p>Είμαι από τους ανθρώπους που από τότε που άρχισα να καταλαβαίνω τον εαυτό μου μέχρι και σήμερα, θεωρούσα το Σεπτέμβρη ως αρχή του έτους και όχι την 1η πρώτου... Κάθε Σεπτέμβρης είναι μια νέα αρχή, ένα νέο ξεκίνημα για όλους όσους εμπλέκονται στην εκπαιδευτική διαδικασία. Παιδιά, γονείς, εκπαιδευτικοί προσπαθούν να προσανατολιστούν και να κάνουν την ετήσια μετάβαση με τον καλύτερο δυνατό τρόπο. Πρέπει να τους ξέρεις καλά τους Σεπτέμβρηδες γιατί έχουν την τάση να σε παραπλανούν! Ξεκινούν κάνοντας σου το γλυκούλη κι «έλα μωρέ, καλοκαίρι είναι ακόμα» κι όσο κι αν εσύ θέλεις λίγη ακόμα τεμπελιά, με το πέρασμα του πρώτου δεκαημέρου, σου δείχνουν τα δοντάκια τους... Ωστόσο, σκοπός τους είναι να σου πουν: «έλα, ξέρω ότι σου είναι δύσκολο», να σε πάρουν από το χέρι και να σε οδηγήσουν σε άλλη μια περιπέτεια! Τέτοια παλιοτόμαρα είναι οι Σεπτέμβρηδες...
 </p>
-  <img src="https://via.placeholder.com/150" alt="A placeholder image">
+  <img src="https://freeimage.host/i/KfXN5Ba">
 </body>
 </html>
 
