--- a/index.html
+++ b/index.html
@@ -1,14 +1,60 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Ειρήνη Παπαθανασίου</title>
+  <title></title>
 </head>
 <body>
-  <h1> Οι Σεπτέμβρηδες...</h1>
-  <p>Είμαι από τους ανθρώπους που από τότε που άρχισα να καταλαβαίνω τον εαυτό μου μέχρι και σήμερα, θεωρούσα το Σεπτέμβρη ως αρχή του έτους και όχι την 1η πρώτου... Κάθε Σεπτέμβρης είναι μια νέα αρχή, ένα νέο ξεκίνημα για όλους όσους εμπλέκονται στην εκπαιδευτική διαδικασία. Παιδιά, γονείς, εκπαιδευτικοί προσπαθούν να προσανατολιστούν και να κάνουν την ετήσια μετάβαση με τον καλύτερο δυνατό τρόπο. Πρέπει να τους ξέρεις καλά τους Σεπτέμβρηδες γιατί έχουν την τάση να σε παραπλανούν! Ξεκινούν κάνοντας σου το γλυκούλη κι «έλα μωρέ, καλοκαίρι είναι ακόμα» κι όσο κι αν εσύ θέλεις λίγη ακόμα τεμπελιά, με το πέρασμα του πρώτου δεκαημέρου, σου δείχνουν τα δοντάκια τους... Ωστόσο, σκοπός τους είναι να σου πουν: «έλα, ξέρω ότι σου είναι δύσκολο», να σε πάρουν από το χέρι και να σε οδηγήσουν σε άλλη μια περιπέτεια! Τέτοια παλιοτόμαρα είναι οι Σεπτέμβρηδες...
+  <h1> </h1>
 </p>
   <img src="https://freeimage.host/i/KfXN5Ba">
 </body>
 </html>
 
 
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Ειρήνη Παπαθανασίου</title>
+  <style>
+    /* This is a CSS comment. It won't show up on your page. */
+
+    /* Change the background color of the entire page */
+    body {
+      background-color: #f0f0f0; /* Use a light grey background */
+      font-family: Arial, sans-serif; /* Set a clean, common font */
+    }
+
+    /* Style the main heading (h1) */
+    h1 {
+      color: #333; /* Dark grey text color */
+      font-size: 48px; /* Increase the size of the heading text */
+      text-align: center; /* Center the heading on the page */
+    }
+
+    /* Style the paragraph text (p) */
+    p {
+      color: #666; /* Slightly lighter grey for paragraph text */
+      font-size: 20px; /* Increase the size of the paragraph text */
+      line-height: 1.6; /* Increase spacing between lines for readability */
+      max-width: 600px; /* Set a maximum width for the text block */
+      margin: 20px auto; /* Center the paragraph horizontally and add space */
+    }
+
+    /* Style the image */
+    img {
+      display: block; /* Makes the image a block element */
+      margin: 0 auto; /* Centers the image horizontally */
+      border: 5px solid #555; /* Adds a solid border around the image */
+      border-radius: 10px; /* Gives the border rounded corners */
+      box-shadow: 2px 2px 8px rgba(0,0,0,0.3); /* Adds a subtle shadow */
+    }
+  </style>
+</head>
+<body>
+  <h1>Ειρήνη Παπαθανασίου</h1>
+  <a href="https://freeimage.host/"><img src="https://iili.io/KfXN5Ba.jpg" alt="KfXN5Ba.jpg" border="0" /></a>  
+  <h2>Οι Σεπτέμβρηδες...</h2>
+  <p>Είμαι από τους ανθρώπους που από τότε που άρχισα να καταλαβαίνω τον εαυτό μου μέχρι και σήμερα, θεωρούσα το Σεπτέμβρη ως αρχή του έτους και όχι την 1η πρώτου... Κάθε Σεπτέμβρης είναι μια νέα αρχή, ένα νέο ξεκίνημα για όλους όσους εμπλέκονται στην εκπαιδευτική διαδικασία. Παιδιά, γονείς, εκπαιδευτικοί προσπαθούν να προσανατολιστούν και να κάνουν την ετήσια μετάβαση με τον καλύτερο δυνατό τρόπο. Πρέπει να τους ξέρεις καλά τους Σεπτέμβρηδες γιατί έχουν την τάση να σε παραπλανούν! Ξεκινούν κάνοντας σου το γλυκούλη κι «έλα μωρέ, καλοκαίρι είναι ακόμα» κι όσο κι αν εσύ θέλεις λίγη ακόμα τεμπελιά, με το πέρασμα του πρώτου δεκαημέρου, σου δείχνουν τα δοντάκια τους... Ωστόσο, σκοπός τους είναι να σου πουν: «έλα, ξέρω ότι σου είναι δύσκολο», να σε πάρουν από το χέρι και να σε οδηγήσουν σε άλλη μια περιπέτεια! Τέτοια παλιοτόμαρα είναι οι Σεπτέμβρηδες...</p>
+
+</body>
+</html>
