--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     /* Style the paragraph text (p) */
     p {
       color: #666; /* Slightly lighter grey for paragraph text */
-      font-size: 20px; /* Increase the size of the paragraph text */
+      font-size: 22px; /* Increase the size of the paragraph text */
       line-height: 1.6; /* Increase spacing between lines for readability */
-      max-width: 600px; /* Set a maximum width for the text block */
-      margin: 20px auto; /* Center the paragraph horizontally and add space */
+      max-width: 500px; /* Set a maximum width for the text block */
+      margin: 22px auto; /* Center the paragraph horizontally and add space */
     }
 
     /* Style the image */
@@ -51,10 +51,9 @@
   </style>
 </head>
 <body>
-  <h1>Ειρήνη Παπαθανασίου</h1>
   <a href="https://freeimage.host/"><img src="https://iili.io/KfXN5Ba.jpg" alt="KfXN5Ba.jpg" border="0" /></a>  
-  <h2>Οι Σεπτέμβρηδες...</h2>
+  <h1>Οι Σεπτέμβρηδες...</h1>
   <p>Είμαι από τους ανθρώπους που από τότε που άρχισα να καταλαβαίνω τον εαυτό μου μέχρι και σήμερα, θεωρούσα το Σεπτέμβρη ως αρχή του έτους και όχι την 1η πρώτου... Κάθε Σεπτέμβρης είναι μια νέα αρχή, ένα νέο ξεκίνημα για όλους όσους εμπλέκονται στην εκπαιδευτική διαδικασία. Παιδιά, γονείς, εκπαιδευτικοί προσπαθούν να προσανατολιστούν και να κάνουν την ετήσια μετάβαση με τον καλύτερο δυνατό τρόπο. Πρέπει να τους ξέρεις καλά τους Σεπτέμβρηδες γιατί έχουν την τάση να σε παραπλανούν! Ξεκινούν κάνοντας σου το γλυκούλη κι «έλα μωρέ, καλοκαίρι είναι ακόμα» κι όσο κι αν εσύ θέλεις λίγη ακόμα τεμπελιά, με το πέρασμα του πρώτου δεκαημέρου, σου δείχνουν τα δοντάκια τους... Ωστόσο, σκοπός τους είναι να σου πουν: «έλα, ξέρω ότι σου είναι δύσκολο», να σε πάρουν από το χέρι και να σε οδηγήσουν σε άλλη μια περιπέτεια! Τέτοια παλιοτόμαρα είναι οι Σεπτέμβρηδες...</p>
-
+<a href="https://freeimage.host/i/KfhcZGI"><img src="https://iili.io/KfhcZGI.md.jpg" alt="KfhcZGI.md.jpg" border="0"></a>
 </body>
 </html>
