--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <h1> </h1>
 </p>
-<a href="https://freeimage.host/"><img src="https://iili.io/KfXN5Ba.jpg" alt="KfXN5Ba.jpg" border="0" /></a>
+<a href="https://freeimage.host/"><img src="https://iili.io/KfXN5Ba.jpg" alt="KfXN5Ba.jpg" border="0" /></a>  
 </body>
 </html>
 
@@ -36,8 +36,10 @@
       color: #666; /* Slightly lighter grey for paragraph text */
       font-size: 22px; /* Increase the size of the paragraph text */
       line-height: 1.6; /* Increase spacing between lines for readability */
-      max-width: 1000px; /* Set a maximum width for the text block */
+      max-width: 10000px; /* Set a maximum width for the text block */
       margin: 22px auto; /* Center the paragraph horizontally and add space */
+      text-align: center; /* Center the heading on the page */
+
     }
 
     /* Style the image */
