--- a/index.html
+++ b/index.html
@@ -3,21 +3,17 @@
 <head>
   <title></title>
 </head>
-  body {
-      /* Remove background-color when using an image */
-      /* background-color: #f0f0f0; */
+  <body {
+      Remove background-color when using an image 
+      background-color: #f0f0f0; 
       font-family: Arial, sans-serif;
-      color: #333; /* Set a default text color that works with your background */
-
-      /* --- Background Image Properties --- */
-      background-image: url(https://github.com/panagiotis81/vollas/blob/main/background.jpg); /* <<< PASTE YOUR IMAGE URL HERE */
-      background-size: cover; /* This makes the image cover the entire background */
-      background-position: center center; /* Centers the image */
-      background-repeat: no-repeat; /* Prevents the image from repeating */
-      background-attachment: fixed; /* Keeps the background image in place when scrolling */
-      /* --- End Background Image Properties --- */
-    }
-  
+      color: #333;
+      background-image:url('https://github.com/panagiotis81/vollas/blob/main/background.jpg');
+      background-size: cover;
+      background-position: center center; 
+      background-repeat: no-repeat; 
+      background-attachment: fixed;
+   
   <h1> </h1>
 </p>
 <a href="https://freeimage.host/"><img src="https://iili.io/KfXN5Ba.jpg" alt="KfXN5Ba.jpg" border="0" /></a>  
