--- a/index.html
+++ b/index.html
@@ -3,23 +3,12 @@
 <head>
   <title></title>
 </head>
-  <body {
-      Remove background-color when using an image 
-      background-color: #f0f0f0; 
-      font-family: Arial, sans-serif;
-      color: #333;
-      background-image:url('https://github.com/panagiotis81/vollas/blob/main/background.jpg');
-      background-size: cover;
-      background-position: center center; 
-      background-repeat: no-repeat; 
-      background-attachment: fixed;
-   
+  <body>
   <h1> </h1>
 </p>
 <a href="https://freeimage.host/"><img src="https://iili.io/KfXN5Ba.jpg" alt="KfXN5Ba.jpg" border="0" /></a>  
 </body>
 </html>
-
 
 <!DOCTYPE html>
 <html>
@@ -61,9 +50,41 @@
       box-shadow: 2px 2px 8px rgba(0,0,0,0.3); /* Adds a subtle shadow */
     }
   </style>
+
+  
 </head>
 <body>
   <h1>Οι Σεπτέμβρηδες...</h1>
   <p>Είμαι από τους ανθρώπους που από τότε που άρχισα να καταλαβαίνω τον εαυτό μου μέχρι και σήμερα, θεωρούσα το Σεπτέμβρη ως αρχή του έτους και όχι την 1η πρώτου... Κάθε Σεπτέμβρης είναι μια νέα αρχή, ένα νέο ξεκίνημα για όλους όσους εμπλέκονται στην εκπαιδευτική διαδικασία. Παιδιά, γονείς, εκπαιδευτικοί προσπαθούν να προσανατολιστούν και να κάνουν την ετήσια μετάβαση με τον καλύτερο δυνατό τρόπο. Πρέπει να τους ξέρεις καλά τους Σεπτέμβρηδες γιατί έχουν την τάση να σε παραπλανούν! Ξεκινούν κάνοντας σου το γλυκούλη κι «έλα μωρέ, καλοκαίρι είναι ακόμα» κι όσο κι αν εσύ θέλεις λίγη ακόμα τεμπελιά, με το πέρασμα του πρώτου δεκαημέρου, σου δείχνουν τα δοντάκια τους... Ωστόσο, σκοπός τους είναι να σου πουν: «έλα, ξέρω ότι σου είναι δύσκολο», να σε πάρουν από το χέρι και να σε οδηγήσουν σε άλλη μια περιπέτεια! Τέτοια παλιοτόμαρα είναι οι Σεπτέμβρηδες...</p>
 </body>
 </html>
+
+</head>
+<body>
+  <h1>Πανελλαδικές Εξετάσεις...</h1>
+  <p>Θα μπορούσα να τις παρομοιάσω με τις μυθικές Συμπληγάδες Πέτρες. Όπως κι αυτές, δυο λεξούλες όλες κι όλες, που ωστόσο κρύβουν από πίσω τους φόβο στα όρια του τρόμου, την αίσθηση ότι «δε θα τη βγάλω καθαρή» αλλά και ελπίδες ότι «θα περάσω» κι όλα θα πάνε καλά. 
+Οι λόγοι για τους οποίους κάθε μαθητής επιλέγει να κάνει αυτό τον άθλο, είναι πολλοί και ποικίλοι. Στην πλειοψηφία όμως, οι μαθητές κι οι οικογένειές τους θεωρούν πώς η επιτυχία στις Πανελλαδικές εξετάσεις σημαίνει επαγγελματική σταδιοδρομία και θετική προσωπική και οικονομική εξέλιξη. Εγώ εδώ θα πω, πως είναι ένα πρώτο βήμα και χρειάζονται πολλά ακόμα ως την επαγγελματική αποκατάσταση αλλά... 
+Σίγουρα, μέσα από τις δυσκολίες και τα βάσανα μιας διαδικασίας αγχωτικής και ανταγωνιστικής ξεπετάγεται ένας κόσμος «νέος», μεγαλύτερος από το μικρόκοσμο ενός σχολείου, γεμάτος γνώση, εμπειρίες, ωρίμανση τόσο μαθησιακή όσο και φυσική και αδιαμφισβήτητα ένα πεδίο δόξης λαμπρό για νέους (εξ)ερευνητές. Αξίζει τον κόπο; Ναι, εκατό, χίλιες φορές ναι!
+Ποιος είναι ο ρόλος του εκπαιδευτικού εδώ; Κάπως αντίστοιχος με αυτόν του τυφλού μάντη Φινέα. Αφού διερευνήσει τους στόχους και τις προθέσεις, αφού εντοπίσει τις πιο συγκεκριμένες δυσκολίες που μπορεί να υπάρχουν, καταστρώνει την πορεία για το πέρασμα. Είναι σαν την παροιμία που λέει πως «ο γάιδαρος τρώγεται μπουκιά μπουκιά». Έτσι λοιπόν, κάθε μέρα, διδάσκει, μεταδίδει, εξηγεί ελέγχει την κατακτημένη γνώση και ταυτόχρονα ενθαρρύνει, στηρίζει και επιβραβεύει τόσο την προσπάθεια όσο και το αποτέλεσμά της. 
+Η «Αργώ» μας περιμένει στο λιμάνι. Ξεκινάμε;</p>
+</body>
+</html>
+
+</head>
+<body>
+  <h1>Ειδικές Μαθησιακές Δυσκολίες...</h1>
+  <p>Είναι από τις φορές που δεν ξέρω από που να ξεκινήσω και πού να τελειώσω... Θα μπορούσα να ορίσω τις μαθησιακές δυσκολίες σύμφωνα με τη βιβλιογραφία, να μιλήσω για Δυσλεξία, ΔΕΠ-Υ, ΔΑΦ και άλλους όρους αλλά νομίζω ότι επί του παρόντος δεν έχει νόημα.
+Αυτό που έχει νόημα να πω είναι ότι οι μαθησιακές δυσκολίες είναι αυτές που εμποδίζουν ένα παιδί το οποίο σκέφτεται διαφορετικά (γιατί ο εγκέφαλός του είναι διαφορετικός!) να μάθει με τον τρόπο που επιτάσσει το παρόν εκπαιδευτικό σύστημα. 
+Η κάθε δυσκολία είναι διαφορετική, όχι μόνο ως προς το βαθμό που υπάρχει, αλλά και αντικειμενικά, εφ’ όσον το κάθε παιδί είναι διαφορετικός άνθρωπος. 
+Στις μέρες μας έχει αρθεί σε μεγάλο βαθμό η προκατάληψη και σπάνια ακούς φράσεις όπως «δεν τα παίρνει τα γράμματα», «το παιδί είναι χαζό/ καθυστερημένο», «έχει αλλού τα μυαλά του» ή «δεν είναι για σχολειό». Όλο και περισσότεροι γονείς είναι υποψιασμένοι σε σχέση με τις μαθησιακές δυσκολίες και προσπαθούν να βρουν τρόπους αξιολόγησης και βοήθειας για τα παιδιά τους. Αυτό όμως δε σημαίνει ούτε ότι μπορούν να καταλάβουν «τι» και «γιατί» τους συμβαίνει, ούτε ότι μπορούν να τα βοηθήσουν χωρίς τη συνδρομή κάποιου ειδικού. 
+Το πρώτο βήμα είναι η αξιολόγηση, που θα προκύψει μοιραία μέσα από την παρατήρηση της συμπεριφοράς του παιδιού είτε από τον ίδιο το γονέα είτε από κάποιο εκπαιδευτικό. Οποιοδήποτε γονιός μπορεί να ζητήσει αξιολόγηση από ιδιώτη κλινικό ψυχολόγο ή από αρμόδια ιδιωτικά κέντρα για να επισπεύσει τη διαδικασία αλλά η μαύρη και πικρή αλήθεια είναι πώς τα απαραίτητα διαπιστευτήρια για τη σχολική ζωή μπορούν να τα εκδώσουν μόνο δημόσιοι φορείς όπως τα ΚΕΔΑΣΥ και κάποια ιατροπαιδαγωγικά κέντρα. 
+Στη συνέχεια πρέπει να έρθει η αποδοχή. Το παιδί είναι απλά διαφορετικό. Τίποτ’ άλλο, απλά διαφορετικό. Δε θέλω να αναφέρω διασημότητες που αντιμετώπισαν στα σχολικά τους χρόνια ρατσισμό και προκατάληψη για επιδόσεις που οφείλονταν σε μαθησιακές δυσκολίες, αλλά θα πω ότι πολλές φορές ο διαφορετικός τρόπος λειτουργίας του εγκεφάλου συνεπάγεται χαρίσματα που δεν είναι εύκολα εμφανή και σε ορισμένες περιπτώσεις αφορούν και στον ακαδημαϊκό τομέα. 
+Μετά την αποδοχή, αυτό που ακολουθεί είναι η στήριξη. Αν είμαστε τυχεροί και η δυσκολία διαγνωστεί νωρίς, τότε υπάρχει το περιθώριο να αμβλυνθεί με τη βοήθεια ενός ειδικού παιδαγωγού. Η δυσκολία δε θα εξαφανιστεί ποτέ, αλλά το ειδικό μάθημα δίνει τη δυνατότητα να αναπτυχθούν τεχνικές και ελιγμοί που θα βοηθούν στη μαθησιακή διαδικασία. Η ωρίμανση οδηγεί από μόνη της σε μερική άμβλυνση της δυσκολίας αλλά σίγουρα είναι προτιμότερη η στήριξη του παιδιού, ώστε να μάθει από το δημοτικό (που τα πράγματα είναι πιο απλά σε επίπεδο ύλης) να αυτενεργεί και να οργανώνει τη γνώση σύμφωνα με τις δικές του ανάγκες.
+Και μετά; Τι γίνεται μετά το δημοτικό; Ε, μετά έρχονται άνθρωποι σαν κι εμένα, καθηγητές της δευτεροβάθμιας εκπαίδευσης με εξειδίκευση στις μαθησιακές δυσκολίες. Στο Γυμνάσιο και στο Λύκειο δεν υπάρχει πρόβλεψη για τις μαθησιακές δυσκολίες, αν εξαιρέσουμε τη δυνατότητα της προφορικής εξέτασης. Είναι πράγματι μυστήριο το γεγονός ότι θεωρείται  πως οι μαθησιακές δυσκολίες εξαφανίζονται με «τρόπο μαγικό» με το πέρασμα του μαθητή στη δευτεροβάθμια. Κάτι τέτοιο βέβαια δεν ισχύει... 
+Έτσι λοιπόν, δική μου δουλειά είναι να δω εξειδικευμένα την κάθε δυσκολία και να βρω τρόπους με τους οποίους το κάθε παιδί θα μπορέσει να ανταποκριθεί στις απαιτήσεις του συστήματος και να πετύχει τους στόχους του. Πώς γίνεται αυτό; Από την πλευρά του εκπαιδευτικού, πέρα από την κατάρτιση στο πεδίο, απαιτείται απόλυτη προσήλωση, υπομονή και απαρέγκλιτη συνέπεια στο στόχο. 
+Από την πλευρά του μαθητή, απαιτείται συνεχής προσπάθεια καθώς κανένας αγώνας δεν κερδίζεται αν οι παίκτες δεν προπονούνται σωστά και με συνέπεια. 
+Παίζει όμως μεγάλο ρόλο και η κερκίδα. Η στήριξη και η κατανόηση από την πλευρά των γονιών είναι θεμέλιος λίθος αυτής της προσπάθειας. Με διαρκή συνεννόηση με τον εκπαιδευτικό αλλά και με το σχολείο, η οικογένεια δημιουργεί μια ασπίδα προστασίας έτσι ώστε να μπορεί να ευοδωθεί η προσπάθεια. Χωρίς τη στήριξη της οικογένειας πολύ λίγα μπορούν να κερδηθούν.
+Εν κατακλείδι... Πραγματικά χαμένος αγώνας είναι ο αγώνας που δε δίνεται. Πρόσκαιρες ήττες μπορεί να υπάρξουν στη μαθητική ζωή όπως και στην κανονική. Θα υπάρξουν βεβαίως και νίκες, αλλά το σημαντικότερο κέρδος είναι ότι μαθαίνεις να αγωνίζεσαι!</p>
+</body>
+</html>
+
