--- a/index.html
+++ b/index.html
@@ -88,3 +88,24 @@
 </body>
 </html>
 
+</head>
+<body>
+  <h1>Περί εκπαιδεύσεως...</h1>
+  <p>Οι περισσότεροι μαθητές όταν ακούν τη λέξη «εκπαίδευση» συνήθως φέρνουν στο μυαλό τους το σχολείο τους -τόσο σαν κτίριο όσο και σαν έννοια- και τους καθηγητές τους, σκέψη που συχνότατα συνοδεύεται από μια αίσθηση καταπίεσης κι απέχθειας. Είναι πολύ σπάνιο το φαινόμενο ένας μαθητής –εδώ που τα λέμε και πολλοί ενήλικοι- να μπορούν να συνδέσουν το σχολείο -όπως το ξέρουν- με μια γενικότερη εικόνα με χαρακτηριστικά ιστορικά, κοινωνικά, πολιτικά και οικονομικά κι ακόμα σπανιότερο ένας μαθητής να τρέφει συναισθήματα αγαθά για τα ευαγή ιδρύματα που φιλοξενούν τη «γνώση» (;).
+Ωστόσο βέβαια, το γεγονός ότι η παραπάνω σύνδεση συνήθως είναι αδύνατη, οφείλεται στο ότι αυτό ακριβώς αποτελεί την επιδίωξη. Πρωτού ακόμα καθοριστεί η διδακτέα ύλη, πρωτού διοριστούν δάσκαλοι ή καθηγητές, πρωτού χτιστούν σχολεία και αποκτηθεί ο αναγκαίος εξοπλισμός καθορίζεται το εξής: τι ανθρώπους θέλουμε να παράγει η εκπαίδευση από την πρώτη ως την τελευταία της βαθμίδα. Και φυσικά πρόκειται για κοινωνικοπολιτικό διακύβευμα που λαμβάνει χώρα μέσα σε συγκεκριμένες οικονομικοϊστορικές συνθήκες. 
+Πιο συγκεκριμένα θα μπορούσαμε να θέσουμε τα ακόλουθα ερωτήματα και να προσπαθήσουμε να τα απαντήσουμε.
+Θέλουμε μαθητές που θ’ αγαπήσουν τη μάθηση και τη γνώση; 
+Θέλουμε μαθητές που θα αυτενεργούν ή που θα αποδέχονται παθητικά όσα ακούν χωρίς να σκέφτονται; 
+Θέλουμε οι μαθητές να σκέφτονται ή απλά να απομνημονεύουν και να καταπίνουν πληθώρα πληροφοριών; 
+Θέλουμε μαθητές που θα συνεργάζονται ή που θ’ ανταγωνίζονται; 
+Θέλουμε παιδιά με υγιή κοινωνικοποίηση και σωστά δομημέμενες διαπροσωπικές σχέσεις;
+Θέλουμε ανθρώπους με γενικές γνώσεις και ανοιχτούς ορίζοντες ή ανθρώπους με μεγάλο βαθμό εξειδίκευσης και τάση στη μονομέρεια; 
+Θέλουμε ανθρώπους που να εργάζονται ανάλογα με τις δυνατότητες, τις κλίσεις και τα ταλέντα τους; 
+Θέλουμε ανθρώπους που να εργάζονται ή ανθρώπους που να προσπαθούν να ζήσουν μια άκοπη και άσκοπη τυχοδιωκτική ζωή; 
+Θέλουμε ανθρώπους που να μπορούν να αναγνωρίσουν το δίκαιο και το άδικο ή ποιες είναι οι αποδεκτές ή οι απαράδεκτες συνθήκες εργασίας;
+Θέλουμε ανθρώπους που να ενδιαφέρονται για τους άλλους και το κοινό καλό; 
+Τι είδους ανθρώπους θέλουμε λοιπόν;
+Κάθε αναγνώστης μπορεί να απαντήσει κατά μόνας τα παραπάνω ερωτήματα και να βγάλει τα δικά του συμπεράσματα. Εντούτοις, ανάλογα με το πώς θα απαντηθούν τα άνωθι καταγραφόμενα ερωτήματα συνάγεται ποια είναι η «εκπαίδευση» που θέλουμε, που έχουμε ή διεκδικούμε. Ας αναλογιστούμε πάνω στο σημερινό εκπαιδευτικό σύστημα. Ας προσπαθήσουμε να το δούμε σα σύστημα κι όχι μεμονωμένα – λάθος που γίνεται όχι μόνο από μαθητές αλλά και γονείς ή εκπαιδευτικούς ή και συνολικά με ανθρώπους άσχετους με τον κόσμο της εκπαίδευσης. 
+Για παράδειγμα το βιβλίο της ιστορίας της τάδε τάξης μπορεί να περιέχει αντιεπιστημονικές ανακρίβειες, ο τάδε καθηγητής του τάδε σχολείου να κρίνεται ανεπαρκής, να μην υπάρχουν ηλεκτρονικοί υπολογιστές στο τάδε σχολείο ή η διεύθυνση του τάδε σχολείου να μην πατάσσει την παραβατικότητα. Κανένας όμως δε θα μπορούσε να ισχυριστεί ότι δεν υπάρχουν και αξιόλογα διδακτικά εγχειρίδια και επαρκέστατοι εκπαιδευτικοί ή διευθυντές (σε όσα αφορούν την υλικοτεχνική υποδομή και τα κονδύλια που διατίθενται δεν...) Όλα τα παραπάνω όμως αποτελούν τις συνιστώσες μιας και μοναδικής συνισταμένης. Ποια είναι η σημασία -και πόση είναι- που δίνουμε σήμερα στην εκπαίδευση;</p>
+</body>
+</html>
