--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <hr>
 </p>
 
-<a href="https://papathaanasiou.fyi/"><img src="https://iili.io/KfXN5Ba.jpg" alt="KfXN5Ba.jpg" border="0" /></a>  
+<img src="background.jpg">
+
 
 
 </body>
