--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <hr>
 </p>
 
-<img src="background.jpg">
-<img src="contact.png">
-
+<img src="background.jpg" style="float:left; margin-right:10px;">
+<img src="contact.png" style="float:left;">    
+    
 
 </body>
 </html>
