--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <body>
   <h1> </h1>
   <hr>
-</p>
 
-<img src="background.jpg" style="float:left; margin-right:10px;">
-<img src="contact.png" style="float:left;">    
+<img src="background.jpg" style="float:center; margin-right:10px;">
+<img src="contact.png" style="float:center;">    
+<hr>
+  
     
-
 </body>
 </html>
 
