--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
       /* You can also use margin-right on the first image if you prefer */
     }
     .image-container img {
-      width: 45%; /* Optional: Sets a responsive width for the images */
-      height: auto;
+      width: 100%; /* Optional: Sets a responsive width for the images */
+      height: 512px;
     }
   </style>
 </head>
 <body>
 
-  <h1>Ειρήνη Παπαθανασίου</h1>
   <hr>
 
   <div class="image-container">
