--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
   <hr>
 
   <div class="image-container">
-    <img src="background.jpg" alt="Background Image">
-    <img src="contact.png" alt="Contact Image">
+    <img src="top.png" >
   </div>
 
   <hr>
