--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
       color: #666; /* Slightly lighter grey for paragraph text */
       font-size: 22px; /* Increase the size of the paragraph text */
       line-height: 1.6; /* Increase spacing between lines for readability */
-      max-width: 20000px; /* Set a maximum width for the text block */
+      max-width: 30000px; /* Set a maximum width for the text block */
       margin: 22px auto; /* Center the paragraph horizontally and add space */
-      text-align: center; /* Center the heading on the page */
+      text-align: justified; /* Center the heading on the page */
 
     }
 
