--- a/index.html
+++ b/index.html
@@ -1,15 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title></title>
-</head>
-  <body>
-  <h1> </h1>
-  <hr>
-    <img src="top.png" >
-  <hr>
-</body>
-</html>
 
 <!DOCTYPE html>
 <html>
@@ -36,9 +24,8 @@
       color: #666; /* Slightly lighter grey for paragraph text */
       font-size: 22px; /* Increase the size of the paragraph text */
       line-height: 1.6; /* Increase spacing between lines for readability */
-      max-width: 30000px; /* Set a maximum width for the text block */
       margin: 22px auto; /* Center the paragraph horizontally and add space */
-      text-align: justified; /* Center the heading on the page */
+      text-align: center; /* Center the heading on the page */
 
     }
 
@@ -52,6 +39,9 @@
     }
   </style>
 
+  <hr>
+  <img src="top.png" >
+  <hr>
   
 </head>
 <body>
