--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     /* Style the paragraph text (p) */
     p {
       color: #666; /* Slightly lighter grey for paragraph text */
-      font-size: 22px; /* Increase the size of the paragraph text */
+      font-size: 23px; /* Increase the size of the paragraph text */
       line-height: 1.6; /* Increase spacing between lines for readability */
       margin: 22px auto; /* Center the paragraph horizontally and add space */
       text-align: center; /* Center the heading on the page */
@@ -40,7 +40,7 @@
   </style>
 
   <hr>
-  <img src="top.png" >
+  <img src="logo.png" >
   <hr>
   
 </head>
@@ -48,8 +48,8 @@
   <h1>Οι Σεπτέμβρηδες...</h1>
   <p>Είμαι από τους ανθρώπους που από τότε που άρχισα να καταλαβαίνω τον εαυτό μου μέχρι και σήμερα, <br> θεωρούσα το Σεπτέμβρη ως αρχή του έτους και όχι την 1η πρώτου... </p> <p>Κάθε Σεπτέμβρης είναι μια νέα αρχή, ένα νέο ξεκίνημα για όλους όσους εμπλέκονται στην εκπαιδευτική διαδικασία. Παιδιά, γονείς, εκπαιδευτικοί προσπαθούν να προσανατολιστούν και να κάνουν την ετήσια μετάβαση με τον καλύτερο δυνατό τρόπο. Πρέπει να τους ξέρεις καλά τους Σεπτέμβρηδες γιατί έχουν την τάση να σε παραπλανούν! Ξεκινούν κάνοντας σου το γλυκούλη κι «έλα μωρέ, καλοκαίρι είναι ακόμα» κι όσο κι αν εσύ θέλεις λίγη ακόμα τεμπελιά, με το πέρασμα του πρώτου δεκαημέρου, σου δείχνουν τα δοντάκια τους... Ωστόσο, σκοπός τους είναι να σου πουν: «έλα, ξέρω ότι σου είναι δύσκολο», να σε πάρουν από το χέρι και να σε οδηγήσουν σε άλλη μια περιπέτεια! Τέτοια παλιοτόμαρα είναι οι Σεπτέμβρηδες...</p>
 </body>
-</html>
-<hr>
+
+  <hr>
 
 </head>
 <body>
@@ -60,7 +60,6 @@
 Ποιος είναι ο ρόλος του εκπαιδευτικού εδώ; Κάπως αντίστοιχος με αυτόν του τυφλού μάντη Φινέα. Αφού διερευνήσει τους στόχους και τις προθέσεις, αφού εντοπίσει τις πιο συγκεκριμένες δυσκολίες που μπορεί να υπάρχουν, καταστρώνει την πορεία για το πέρασμα. Είναι σαν την παροιμία που λέει πως «ο γάιδαρος τρώγεται μπουκιά μπουκιά». Έτσι λοιπόν, κάθε μέρα, διδάσκει, μεταδίδει, εξηγεί ελέγχει την κατακτημένη γνώση και ταυτόχρονα ενθαρρύνει, στηρίζει και επιβραβεύει τόσο την προσπάθεια όσο και το αποτέλεσμά της. 
 Η «Αργώ» μας περιμένει στο λιμάνι. Ξεκινάμε;</p>
 </body>
-</html>
 
 <hr>
 
@@ -79,7 +78,6 @@
 Παίζει όμως μεγάλο ρόλο και η κερκίδα. Η στήριξη και η κατανόηση από την πλευρά των γονιών είναι θεμέλιος λίθος αυτής της προσπάθειας. Με διαρκή συνεννόηση με τον εκπαιδευτικό αλλά και με το σχολείο, η οικογένεια δημιουργεί μια ασπίδα προστασίας έτσι ώστε να μπορεί να ευοδωθεί η προσπάθεια. Χωρίς τη στήριξη της οικογένειας πολύ λίγα μπορούν να κερδηθούν.</p><p>
 Εν κατακλείδι... Πραγματικά χαμένος αγώνας είναι ο αγώνας που δε δίνεται. Πρόσκαιρες ήττες μπορεί να υπάρξουν στη μαθητική ζωή όπως και στην κανονική. Θα υπάρξουν βεβαίως και νίκες, αλλά το σημαντικότερο κέρδος είναι ότι μαθαίνεις να αγωνίζεσαι!</p>
 </body>
-</html>
 
 <hr>
 
@@ -103,7 +101,6 @@
 Κάθε αναγνώστης μπορεί να απαντήσει κατά μόνας τα παραπάνω ερωτήματα και να βγάλει τα δικά του συμπεράσματα. Εντούτοις, ανάλογα με το πώς θα απαντηθούν τα άνωθι καταγραφόμενα ερωτήματα συνάγεται ποια είναι η «εκπαίδευση» που θέλουμε, που έχουμε ή διεκδικούμε. Ας αναλογιστούμε πάνω στο σημερινό εκπαιδευτικό σύστημα. Ας προσπαθήσουμε να το δούμε σα σύστημα κι όχι μεμονωμένα – λάθος που γίνεται όχι μόνο από μαθητές αλλά και γονείς ή εκπαιδευτικούς ή και συνολικά με ανθρώπους άσχετους με τον κόσμο της εκπαίδευσης. </p><p>
 Για παράδειγμα το βιβλίο της ιστορίας της τάδε τάξης μπορεί να περιέχει αντιεπιστημονικές ανακρίβειες, ο τάδε καθηγητής του τάδε σχολείου να κρίνεται ανεπαρκής, να μην υπάρχουν ηλεκτρονικοί υπολογιστές στο τάδε σχολείο ή η διεύθυνση του τάδε σχολείου να μην πατάσσει την παραβατικότητα. Κανένας όμως δε θα μπορούσε να ισχυριστεί ότι δεν υπάρχουν και αξιόλογα διδακτικά εγχειρίδια και επαρκέστατοι εκπαιδευτικοί ή διευθυντές (σε όσα αφορούν την υλικοτεχνική υποδομή και τα κονδύλια που διατίθενται δεν...) Όλα τα παραπάνω όμως αποτελούν τις συνιστώσες μιας και μοναδικής συνισταμένης. Ποια είναι η σημασία -και πόση είναι- που δίνουμε σήμερα στην εκπαίδευση;</p>
 </body>
-</html>
 
 <hr>
 
@@ -120,6 +117,8 @@
 Ε. Παπανούτσος, από το Δοκίμιο “Πρωτοβουλία και οίστρος . Ιδού το μάθημα”</p>
   
 </body>
-</html>
 
 <hr>
+</html>
+
+  
