--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
   </style>
 
   <hr>
-  <img src="logo.png" >
+  <img {
+      max-width: 100%;
+      height: auto;
+      src="logo.png" 
+      }>
   <hr>
   
 </head>
