--- a/index.html
+++ b/index.html
@@ -33,18 +33,14 @@
     img {
       display: block; /* Makes the image a block element */
       margin: 0 auto; /* Centers the image horizontally */
-      border: 5px solid #555; /* Adds a solid border around the image */
+      border: 3px solid #555; /* Adds a solid border around the image */
       border-radius: 10px; /* Gives the border rounded corners */
-      box-shadow: 2px 2px 8px rgba(0,0,0,0.3); /* Adds a subtle shadow */
+      box-shadow: 1px 1px 8px rgba(0,0,0,0.3); /* Adds a subtle shadow */
     }
   </style>
 
   <hr>
-  <img {
-      max-width: 100%;
-      height: auto;
-      src="logo.png" 
-      }>
+  <img  src="logo.png" style="width:1077px;height:512px;" >
   <hr>
   
 </head>
